# Driver-Scene

./: .env.example  .gitignore  Dockerfile  README.md  RESULTS.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
dashboard/: app.js  index.html  sample_comparison_table.json  styles.css
src/: __main__.py  cli.py  config.py  models.py  pipeline.py
src/agent/: __init__.py  analyzer.py
src/data/: __init__.py  downloader.py  ground_truth.py  temporal.py
src/evaluation/: __init__.py  bertscore.py  completeness.py  count_accuracy.py  hallucination.py  judge.py  spatial.py
src/prompts/: __init__.py  registry.py  templates.py
src/vlm/: __init__.py  client.py  groq_client.py
tests/: test_integration.py  test_pipeline.py
